[gd_scene load_steps=78 format=3 uid="uid://dq8m7vo5cdnvk"]

[ext_resource type="Texture2D" path="res://[PeakPixels] Common Birds/Crow/Crow.png" id="1_4flbx"]
[ext_resource type="Shader" uid="uid://cav2lbxjijayo" path="res://shaders/Player.gdshader" id="1_e80uo"]
[ext_resource type="Script" uid="uid://d0ahve4xrt074" path="res://scripts/player.gd" id="1_onrkg"]
[ext_resource type="PackedScene" uid="uid://co62be2ugu8lf" path="res://scenes/Nut.tscn" id="2_kne1u"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cxr5p"]
shader = ExtResource("1_e80uo")
shader_parameter/flash_color = Color(0.5137255, 0.7411765, 1, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_onrkg"]
atlas = ExtResource("1_4flbx")
region = Rect2(3200, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3pqv"]
atlas = ExtResource("1_4flbx")
region = Rect2(3264, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("1_4flbx")
region = Rect2(3328, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("1_4flbx")
region = Rect2(3392, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("1_4flbx")
region = Rect2(3456, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("1_4flbx")
region = Rect2(3520, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = ExtResource("1_4flbx")
region = Rect2(1216, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("1_4flbx")
region = Rect2(1280, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("1_4flbx")
region = Rect2(1344, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("1_4flbx")
region = Rect2(1408, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = ExtResource("1_4flbx")
region = Rect2(1472, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = ExtResource("1_4flbx")
region = Rect2(1536, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = ExtResource("1_4flbx")
region = Rect2(1600, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = ExtResource("1_4flbx")
region = Rect2(1664, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = ExtResource("1_4flbx")
region = Rect2(1728, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_op7ga"]
atlas = ExtResource("1_4flbx")
region = Rect2(1792, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13i1"]
atlas = ExtResource("1_4flbx")
region = Rect2(1856, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pylmc"]
atlas = ExtResource("1_4flbx")
region = Rect2(2048, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbfsw"]
atlas = ExtResource("1_4flbx")
region = Rect2(2112, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tmop"]
atlas = ExtResource("1_4flbx")
region = Rect2(2432, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ahtn"]
atlas = ExtResource("1_4flbx")
region = Rect2(2496, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lmhl"]
atlas = ExtResource("1_4flbx")
region = Rect2(2560, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx0e4"]
atlas = ExtResource("1_4flbx")
region = Rect2(2624, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm5j8"]
atlas = ExtResource("1_4flbx")
region = Rect2(2688, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hik5"]
atlas = ExtResource("1_4flbx")
region = Rect2(2752, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtqh7"]
atlas = ExtResource("1_4flbx")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wuci"]
atlas = ExtResource("1_4flbx")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iruf7"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5n4i"]
atlas = ExtResource("1_4flbx")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_634y6"]
atlas = ExtResource("1_4flbx")
region = Rect2(2880, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_efrwb"]
atlas = ExtResource("1_4flbx")
region = Rect2(2944, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiqhm"]
atlas = ExtResource("1_4flbx")
region = Rect2(3008, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkwlq"]
atlas = ExtResource("1_4flbx")
region = Rect2(3072, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl5qd"]
atlas = ExtResource("1_4flbx")
region = Rect2(3136, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek41f"]
atlas = ExtResource("1_4flbx")
region = Rect2(1920, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_khis8"]
atlas = ExtResource("1_4flbx")
region = Rect2(1984, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b88wv"]
atlas = ExtResource("1_4flbx")
region = Rect2(1472, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgbbb"]
atlas = ExtResource("1_4flbx")
region = Rect2(1536, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_331ug"]
atlas = ExtResource("1_4flbx")
region = Rect2(1600, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny14h"]
atlas = ExtResource("1_4flbx")
region = Rect2(1664, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibah8"]
atlas = ExtResource("1_4flbx")
region = Rect2(1728, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iwfv"]
atlas = ExtResource("1_4flbx")
region = Rect2(1792, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwsg1"]
atlas = ExtResource("1_4flbx")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xqrm"]
atlas = ExtResource("1_4flbx")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfour"]
atlas = ExtResource("1_4flbx")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gr2b"]
atlas = ExtResource("1_4flbx")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl8ci"]
atlas = ExtResource("1_4flbx")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieltc"]
atlas = ExtResource("1_4flbx")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fddr8"]
atlas = ExtResource("1_4flbx")
region = Rect2(2176, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oybyf"]
atlas = ExtResource("1_4flbx")
region = Rect2(2240, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajfva"]
atlas = ExtResource("1_4flbx")
region = Rect2(2304, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ef02"]
atlas = ExtResource("1_4flbx")
region = Rect2(2368, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfmca"]
atlas = ExtResource("1_4flbx")
region = Rect2(2432, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_76oay"]
atlas = ExtResource("1_4flbx")
region = Rect2(2496, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4uyv"]
atlas = ExtResource("1_4flbx")
region = Rect2(2560, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tw8ou"]
atlas = ExtResource("1_4flbx")
region = Rect2(2624, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygbnx"]
atlas = ExtResource("1_4flbx")
region = Rect2(2688, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2t6f"]
atlas = ExtResource("1_4flbx")
region = Rect2(2752, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3lcn"]
atlas = ExtResource("1_4flbx")
region = Rect2(2816, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xry5e"]
atlas = ExtResource("1_4flbx")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6w8y"]
atlas = ExtResource("1_4flbx")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yem3p"]
atlas = ExtResource("1_4flbx")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_86rna"]
atlas = ExtResource("1_4flbx")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg1a7"]
atlas = ExtResource("1_4flbx")
region = Rect2(960, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ob4mi"]
atlas = ExtResource("1_4flbx")
region = Rect2(1024, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax26h"]
atlas = ExtResource("1_4flbx")
region = Rect2(1088, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kh4g0"]
atlas = ExtResource("1_4flbx")
region = Rect2(1152, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_mgmjd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onrkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3pqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}],
"loop": true,
"name": &"caw",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13i1")
}],
"loop": true,
"name": &"eat",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pylmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbfsw")
}],
"loop": true,
"name": &"fly",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tmop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ahtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lmhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx0e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm5j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hik5")
}],
"loop": true,
"name": &"fly_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtqh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wuci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iruf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5n4i")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_634y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efrwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiqhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkwlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl5qd")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek41f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khis8")
}],
"loop": true,
"name": &"peck",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b88wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgbbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_331ug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny14h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibah8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iwfv")
}],
"loop": true,
"name": &"peck_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwsg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xqrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfour")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gr2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl8ci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieltc")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fddr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oybyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajfva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ef02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfmca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76oay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4uyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tw8ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygbnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2t6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3lcn")
}],
"loop": true,
"name": &"takeoff",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xry5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6w8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yem3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86rna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg1a7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob4mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax26h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kh4g0")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_onrkg"]
radius = 11.275036

[sub_resource type="Animation" id="Animation_cxr5p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_e80uo"]
resource_name = "flash"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cxr5p"]
_data = {
&"RESET": SubResource("Animation_cxr5p"),
&"flash": SubResource("Animation_e80uo")
}

[node name="Area2D" type="Area2D"]
material = SubResource("ShaderMaterial_cxr5p")
collision_mask = 2
script = ExtResource("1_onrkg")
nut_scene = ExtResource("2_kne1u")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
use_parent_material = true
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_mgmjd")
animation = &"eat"
frame_progress = 0.747916

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.999999, 14)
rotation = 0.5791667
scale = Vector2(-4.464328, -2.688871)
shape = SubResource("CircleShape2D_onrkg")

[node name="NutTimer" type="Timer" parent="."]

[node name="FlashAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cxr5p")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="NutTimer" to="." method="_on_nut_timer_timeout"]
